--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "svg-loaders-react",
   "version": "0.1.0",
   "description": "React implementation of the SVG Loaders library by Sam Herbert",
+  "repository": {
+    "type": "git",
+    "ur;": "https://github.com/ajwann/svg-loaders-react"
+  },
   "main": "dist/index.js",
   "peerDependendies": {
     "react": "^16.7.0"
