--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
   },
   "main": "dist/index.js",
   "peerDependendies": {
-    "react": "^16.7.0"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-svg-inline": "^2.1.1",
-    "webpack": "^4.29.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -26,7 +23,11 @@
     "raw-loader": "^1.0.0",
     "react-inlinesvg": "^0.8.4",
     "svg-inline-loader": "^0.8.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-svg-inline": "^2.1.1",
+    "webpack": "^4.29.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
