--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "webpack": "^4.29.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "start": "webpack --watch",
     "build": "webpack"
   },
