--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
-  "presets": ["env"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
-    "transform-object-rest-spread",
+    "@babel/plugin-proposal-object-rest-spread",
     "transform-react-jsx"
   ]
 }
