--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-inlinesvg": "^0.8.4",
-    "react-svg-inline": "^2.1.1",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
   "scripts": {
     "lint": "eslint --ext .js,.ts,.tsx .",
+    "lint:fix": "eslint --ext .js,.ts,.tsx . --fix",
     "test": "jest",
     "test:dev": "jest --watch",
     "start": "webpack --watch",
