--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ur;": "https://github.com/ajwann/svg-loaders-react"
   },
   "main": "dist/index.js",
+  "types": "src/index.ts",
   "peerDependendies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
@@ -47,7 +48,8 @@
     "test": "jest",
     "test:dev": "jest --watch",
     "start": "webpack --watch",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "prepublishOnly": "yarn build"
   },
   "jest": {
     "setupFiles": [
