--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg-loaders-react",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "description": "React implementation of the SVG Loaders library by Sam Herbert",
   "repository": {
     "type": "git",
@@ -8,32 +8,35 @@
   },
   "main": "dist/index.js",
   "peerDependendies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react": ">=18",
+    "react-dom": ">=18"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@cfaester/enzyme-adapter-react-18": "^0.8.0",
+    "@testing-library/react": "^16.1.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.8.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.0.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "jest": "^29.7.0",
+    "jsdom": "^25.0.1",
+    "jsdom-global": "^3.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
