--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React implementation of the SVG Loaders library by Sam Herbert",
   "repository": {
     "type": "git",
-    "ur;": "https://github.com/ajwann/svg-loaders-react"
+    "url": "https://github.com/ajwann/svg-loaders-react"
   },
   "main": "dist/index.js",
   "peerDependendies": {
